# Galileo

./: .eslintrc.cjs  .gitignore  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: main-ci-cd.yml
convex/: auth.config.ts  auth.ts  schema.ts  users.ts
docs/plans/: 2026-01-29-plugin-asset-loader-design.md  2026-01-30-cursor-hit-testing-design.md  2026-01-30-resize-handles-transform-design.md  2026-01-31-export-to-rust-design.md  2026-02-01-editing-parity-core-features-design.md  2026-02-01-editing-parity-implementation-plan.md  2026-02-01-figma-core-features-implementation-plan.md  3D-icon-feature.md  background-remove.plan.md
public/: manifest.json
scripts/: generate-3dicons-manifest.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: background_remove.rs  draft_store.rs  figma.rs  main.rs  unsplash.rs
src/ai/: context-builder.ts  shadow-apply.ts
src/auth/: AuthProvider.tsx  errors.ts  index.ts  jwt.ts  secure-token-storage.ts  types.ts
src/core/: feature-flags.ts  framePresets.ts
src/hooks/: useCanvas.ts  useDocument.ts
src/interaction/: handles.ts  snapping.ts  transform-session.ts
src/interop/: types.ts
src/plugins/: builtin.ts  storage.ts  types.ts
src/render/: benchmark.ts  export.ts  shadow-blend.test.ts
src/types/: bun-test.d.ts
src/ui/: ActionBar.tsx  AssetsPanel.tsx  Canvas.tsx  CommandPalette.tsx  ContextMenu.tsx  DeviceFramePicker.tsx  PagesPanel.tsx  (+16 more)
(+100 files in other folders)
