[package]
name = "galileo"
version = "0.1.0"
edition = "2021"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
tauri = { version = "2.5.4", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-deep-link = "2.4"
tauri-plugin-single-instance = { version = "2.2", features = ["deep-link"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.14"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = [
  "png",
  "webp",
  "jpeg",
] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "2.5"
dotenvy = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
